@@ -49,7 +49,6 @@
 #define FEATURE_INTERPRETIVE_EXECUTION
 #define FEATURE_IO_ASSIST
 #define FEATURE_LINKAGE_STACK
-//#define FEATURE_LOAD_ADDITIONAL                                  /*@Z9*/
 #define FEATURE_LOAD_REVERSED
 #define FEATURE_LOCK_PAGE
 #define FEATURE_LONG_DISPLACEMENT
