@@ -124,7 +124,6 @@
 #undef FEATURE_INTERVAL_TIMER
 #undef FEATURE_IO_ASSIST
 #undef FEATURE_LINKAGE_STACK
-#undef FEATURE_LOAD_ADDITIONAL                                  /*@Z9*/
 #undef FEATURE_LOAD_REVERSED
 #undef FEATURE_LOCK_PAGE
 #undef FEATURE_LONG_DISPLACEMENT
